# alignment-dataset-cruxes

./: .env.example  .gitignore  README.md  cruxes.json  index.html  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  rebuild-cruxes.yml
cruxes/: example.json
data/: authored_claims.json  authored_cruxes.json
data/processed/: comments_cache.jsonl  references_cache.jsonl
details/: 00.json  01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  0a.json  0b.json  0c.json  0d.json  0e.json  0f.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  1a.json  1b.json  1c.json  1d.json  1e.json  1f.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  (+216 more)
scripts/: build_crux_map.py  comments.py  double_crux.py  heuristic_crux.py  post_claims.py  validate_cruxes.py
tests/: test_build_crux_map.py  test_comments.py  test_double_crux.py  test_heuristic_crux.py  test_post_claims.py  test_validate_cruxes.py
