[project]
name = "alignment-dataset-cruxes"
version = "0.1.0"
description = "Curated alignment evaluation cruxes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# build_crux_map bootstraps sys.path before importing project modules.
"scripts/build_crux_map.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
